# KiloGridAggregation

./: README.md
ODEmodel/: ODE.py  ODE2.py  ode_aggregation.nb
Simulation/: density.txt  make_and_run.sh  make_and_run_batch.sh
Simulation/ARGoS_simulation/behaviours/: CMakeLists.txt  agent.h  agent_stub.c  agent_stub_black.c  agent_stub_black_base.c  agent_stub_non_informed.c  agent_stub_non_informed_base.c  agent_stub_white.c  agent_stub_white_base.c
Simulation/ARGoS_simulation/data_generation_scripts/: non_informed_histogram.py
Simulation/ARGoS_simulation/data_generation_scripts/Results/025_2/: results_non_informed1.csv  results_non_informed12.csv  results_non_informed18.csv  results_non_informed19.csv  results_non_informed2.csv  results_non_informed20.csv  results_non_informed24.csv  results_non_informed25.csv  results_non_informed27.csv  results_non_informed32.csv  results_non_informed34.csv  results_non_informed35.csv  results_non_informed36.csv  results_non_informed37.csv  results_non_informed38.csv  results_non_informed39.csv  results_non_informed4.csv  results_non_informed44.csv  results_non_informed47.csv  results_non_informed49.csv  results_non_informed6.csv  results_non_informed7.csv  results_non_informed8.csv  results_non_informed9.csv
Simulation/ARGoS_simulation/experiment/: kilogrid_stub.argos  kilogrid_stub_mod.argos
Simulation/ARGoS_simulation/loop_functions/: aggregation_arena.kconf  kilogrid_stub.cpp  kilogrid_stub.h
kconf_generation_scripts/: aggregation_arena.kconf  kconf_generation_script.py
(+3883 files in other folders)
